# code-reviewer

./: .gitignore  README.md  agent.py  gigachat_client.py  github_client.py  main.py  pyproject.toml
src/code_reviewer/: bitbucket_client.py  main.py
tests/: test_agent.py
